@@ -13,6 +13,7 @@ define( function( require ) {
   var Rectangle = require( 'SCENERY/nodes/Rectangle' );
   var Text = require( 'SCENERY/nodes/Text' );
   var inherit = require( 'PHET_CORE/inherit' );
+  var MultiLineText = require( 'SCENERY_PHET/MultiLineText' );
   var TabView = require( 'JOIST/TabView' );
   var PanelNode = require( 'SUN/PanelNode' );
 
@@ -26,11 +27,14 @@ define( function( require ) {
     //Use view, to help center and scale content
     TabView.call( this );
 
-    var content = new VBox( {spacing: 10, children: [
+    var content = new VBox( { align: 'left', spacing: 5, children: [
+      new Text( 'PhET Interactive Simulations', {fontSize: 16} ),
+      new Text( 'Copyright © 2004-2013 University of Colorado Boulder', {fontSize: 12} ),
+      new Text( ' ', {fontSize: 28 } ),
       new Text( sim.name, {fontSize: 28} ),
       new Text( "version " + sim.version, {fontSize: 20} ),
-      new Text( 'PhET Interactive Simulations', {fontSize: 18} ),
-      new Text( 'Copyright © 2004-2013 University of Colorado Boulder', {fontSize: 14} )
+      new Text( ' ' ),
+      new MultiLineText( sim.credits, { align: 'left', fontSize: 12 } )
     ]} );
 
     //Show a gray overlay that will help focus on the about dialog, and prevent clicks on the sim while the dialog is up
